-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 13.0.2
-
None
-
Ubuntu 24.04
Qt Creator 13.0.2
-
-
fedb43a5f (14.0)
In Qt Creator's help viewer, when I select a documentation item that is faulty, the Qt Creator opens a default text editor with an empty text file @ /tmp/QtCreator-######/qtchelp_######.
The faulty item examples:
- an item that corresponds to a topic which does not belong to the current module
- an item that refers to a topic that does not exist, like this one: https://code.qt.io/cgit/qt/qtdeclarative.git/tree/src/qml/doc/qtqml.qdocconf?h=v6.7.2#n23
Steps to reproduce:
- In Qt Creator, open the help viewer.
- Expand the Qt QML documentation module, select Examples.
The default text editor with an empty temp file opens.
- relates to
-
QTCREATORBUG-29371 Empty editor opening on F1
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-31178 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 574246,3 | Help: Do not try to open folder | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |