Help: Do not try to open folder

We end up using a system editor or the question which tool
to use when trying to open a fake help item.

Fixes: QTCREATORBUG-31178
Change-Id: I21b7c98a7ea0c2b442ad8b733477c725f96e80e1
Reviewed-by: Eike Ziller <eike.ziller@qt.io>